force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
  <label>Order Line Item</label>
  <pluralLabel>Order Line Items</pluralLabel>
  <nameField>
    <label>Line Item Number</label>
    <type>AutoNumber</type>
    <displayFormat>OLI-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>