force-app/main/default/objects/Order_Line_Item__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
  <fullName>Menu_Item__c</fullName>
  <label>Menu Item</label>
  <type>Lookup</type>
  <referenceTo>Menu_Item__c</referenceTo>
  <relationshipName>MenuItem</relationshipName>
</CustomField>