force-app/main/default/objects/Order_Line_Item__c/fields/Order__c.field-meta.xml
<CustomField>
  <fullName>Order__c</fullName>
  <label>Order</label>
  <type>Lookup</type>
  <referenceTo>Order__c</referenceTo>
  <relationshipName>OrderLineItems</relationshipName>
</CustomField>