force-app/main/default/objects/Order_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
  <fullName>Price__c</fullName>
  <label>Price</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>