force-app/main/default/objects/Order_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
  <fullName>Quantity__c</fullName>
  <label>Quantity</label>
  <type>Number</type>
  <precision>5</precision>
  <scale>0</scale>
</CustomField>