force-app/main/default/objects/Order_Line_Item__c/fields/Special_Notes__c.field-meta.xml
<CustomField>
  <fullName>Special_Notes__c</fullName>
  <label>Special Notes</label>
  <type>Text</type>
  <length>255</length>
</CustomField>