force-app/main/default/objects/Order_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label> Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>New</fullName>
      </value>
      <value>
        <fullName>In Progress</fullName>
      </value>
      <value>
        <fullName>Served</fullName>
      </value>
      <value>
        <fullName>Paid</fullName>
      </value>
      <value>
        <fullName>Cancelled</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>